test/errors/packages/library-template-missing/build.ts
import { runAngularPackageBuilder } from '../../../..';

runAngularPackageBuilder( [
	'test/external-resources/packages/library-template-missing/.angular-package.json'
] ).catch( ( error: Error ) => {
	// Do nothing
} );
